Refactor README user guide and update tmux omnisearch binding

--- a/resources/config/tmux/.tmux.conf
+++ b/resources/config/tmux/.tmux.conf
@@ -90,8 +90,8 @@ bind-key -n M-Space run-shell "am start -n net.nhiroki.bluelineconsole/net.nhiro
 # Future snippet: single tap -> next window, double tap -> previous window.
 # bind -n MouseUp1Pane run-shell "~/.tmux/scripts/tap-window-nav.sh single"
 # bind -n DoubleClick1Pane run-shell "true"
-# App launcher (Ctrl+Space) - uses new window for Sixel support
-bind -n C-Space new-window -n appsbar "$HOME/files/tooie-appsbar-go/tooie-shelf"
+# Omnisearch launcher (Ctrl+Space) - opens BlueLineConsole Android app
+bind -n C-Space run-shell "am start -n net.nhiroki.bluelineconsole/net.nhiroki.bluelineconsole.applicationMain.MainActivity > /dev/null 2>&1"
 
 # -- Extra Keys Row Bindings (prefix + special keys) --
 # These are triggered by the extra-keys row in termux.properties
