--- a/app/build.gradle
+++ b/app/build.gradle
@@ -136,6 +136,9 @@ dependencies {
     implementation project(":terminal-view")
     implementation project(":termux-shared")
     implementation project(":native-entrypoint")
+    // Shizuku dependencies for privileged operations
+    implementation "dev.rikka.shizuku:api:13.1.5"
+    implementation "dev.rikka.shizuku:provider:13.1.5"
     testImplementation "junit:junit:4.13.2"
     testImplementation "org.robolectric:robolectric:4.13"
     androidTestImplementation "androidx.test:runner:1.6.2"
