--- a/gradle.properties
+++ b/gradle.properties
@@ -22,6 +22,7 @@ android.useAndroidX=true
 
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
+android.aapt2FromMavenOverride=/data/data/com.termux/files/usr/bin/aapt2
 
 minSdkVersion=26
 targetSdkVersion=28
