Remove outdated AGENTS.md and add to gitignore
Phases mentioned in AGENTS.md are complete, removing outdated task-specific documentation.

--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,7 @@ project-plan.md
 knowledge-base.md
 CLAUDE.md
 project-ledger.md
+AGENTS.md
 
 # Agent workspace (keep config/scripts tracked, ignore runtime logs)
 /work-logs/build-error.log
